--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,17 @@
   height: 100vh; }
   .states-group .state-container {
     flex: 1; }
+    .states-group .state-container > div {
+      display: flex;
+      flex-direction: column; }
     .states-group .state-container header {
       background: #E0E0E0; }
       .states-group .state-container header h1 {
         padding: .5em; }
   .states-group .entity {
-    margin: .5em; }
+    margin: .5em;
+    display: inline !important; }
+    .states-group .entity.bug {
+      border-left: 2px solid #F44336; }
+    .states-group .entity.userstory {
+      border-left: 2px solid #03A9F4; }
