add row flexbox style

--- a/src/App.css
+++ b/src/App.css
@@ -29,16 +29,20 @@
   height: 100vh; }
   .states-group .state-container {
     flex: 1; }
-    .states-group .state-container > div {
+    .states-group .state-container--list {
+      margin-top: .5em;
       display: flex;
-      flex-direction: column; }
+      flex-direction: row; }
+      .states-group .state-container--list > div {
+        display: flex;
+        flex-direction: row; }
     .states-group .state-container header {
       background: #E0E0E0; }
       .states-group .state-container header h1 {
-        padding: .5em; }
+        padding: 1em;
+        text-align: center; }
   .states-group .entity {
-    margin: .5em;
-    display: inline !important; }
+    margin: .5em; }
     .states-group .entity.bug {
       border-left: 2px solid #F44336; }
     .states-group .entity.userstory {
