--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   display: none; }
 
 .App-header {
-  background-color: #222;
+  background-color: #009688;
   height: 150px;
   padding: 20px;
   color: white;
@@ -23,12 +23,20 @@
   width: 100%;
   height: 100vh; }
   .states-group .state-container {
-    flex: 1; }
+    flex: 1;
+    border-left: 1px solid #009688; }
+    .states-group .state-container:first {
+      border-left: none; }
     .states-group .state-container header {
-      background: #E0E0E0; }
+      background: #009688;
+      padding: 1em .5em 1em .5em; }
+      .states-group .state-container header .ui.label {
+        margin-top: .3em;
+        margin-bottom: .3em; }
       .states-group .state-container header h1 {
-        padding: 1em;
-        text-align: center; }
+        font-size: large;
+        color: white;
+        text-transform: uppercase; }
     .states-group .state-container--list {
       display: flex;
       flex-direction: row;
