add github deploy

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,21 @@
     border-left: 3px solid #F44336; }
   .states-group .entity.userstory {
     border-left: 3px solid #03A9F4; }
+
+.state-container {
+  background: lime;
+  height: 200px;
+  width: 300px; }
+
+.state-container.resizable {
+  background: cyan;
+  position: relative; }
+
+.state-container .resizer {
+  width: 10px;
+  height: 10px;
+  background: blue;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  cursor: se-resize; }
