--- a/src/App.scss
+++ b/src/App.scss
@@ -78,3 +78,8 @@ $primary-color-dark: #00796B;
     }
   }
 }
+
+
+.state-container { background: lime; height: 200px; width: 300px; }
+.state-container.resizable { background: cyan; position: relative; }
+.state-container .resizer { width: 10px; height: 10px; background: blue; position:absolute; right: 0; bottom: 0; cursor: se-resize; }
