--- a/src/App.scss
+++ b/src/App.scss
@@ -64,10 +64,14 @@ $primary-color-dark: #00796B;
           font-size: 1em;
         }
       }
+
+      &.resizable { position: relative; }
+      .resizer { width: 10px; height: 10px; background: blue; position:absolute; right: 0; bottom: 0; cursor: se-resize; }
     }
+
   }
 
-  
+
   .entity {
     
     &.bug {
@@ -79,7 +83,3 @@ $primary-color-dark: #00796B;
   }
 }
 
-
-.state-container { background: lime; height: 200px; width: 300px; }
-.state-container.resizable { background: cyan; position: relative; }
-.state-container .resizer { width: 10px; height: 10px; background: blue; position:absolute; right: 0; bottom: 0; cursor: se-resize; }
