--- a/src/App.scss
+++ b/src/App.scss
@@ -82,3 +82,25 @@ $primary-color-dark: #00796B;
   }
 }
 
+// details view
+.entitiy-details {
+  
+  padding-top: 1em;
+  padding-bottom: 1em;
+  
+  header {
+    h1 {
+      font-size: large;
+
+      .id,
+      .title {
+        color: $primary-color;
+        font-weight: bold;
+      }
+
+      .id {
+        margin-left: 1em;
+      }
+    }
+  }
+}
